--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ const meta = {
       {
         title: 'Curious',
         description:
-          'Ever wonder how something works? Knowing how something works is sometimes just as important, and that\'s just exactly drives me.',
+          'Ever wonder how something works? Knowing how something works is sometimes just as important, and that\'s exactly what drives me.',
         icon: 'ph:brain-bold',
       },
       {
