Fixed odd transition from light to dark mode

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -85,7 +85,7 @@ const {
                 </>
               ) : (
                 <a
-                  class="dark:text-white px-4 md:py-2 py-5 flex items-center transition duration-150 hover:bg-slate/10 dark:hover:bg-white/20 rounded-lg"
+                  class="text-slate dark:text-white px-4 md:py-2 py-5 flex items-center transition duration-150 hover:bg-slate/10 dark:hover:bg-white/20 rounded-lg"
                   href={href}
                 >
                   {text}
