--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -44,7 +44,9 @@ import { SITE } from '~/config.mjs';
       if (!header.classList.contains('scroll')) {
         document.getElementById('header').classList.add('scroll');
       } else if (lastKnownScrollPosition <= 40 && header.classList.contains('scroll')) {
-        document.getElementById('header').classList.remove('scroll');
+        setTimeout(function() {
+          document.getElementById('header').classList.remove('scroll');
+        }, 300);
       }
       });
 
