--- a/src/components/widgets/Features.astro
+++ b/src/components/widgets/Features.astro
@@ -50,8 +50,8 @@ const {
     <div class="grid md:grid-cols-2 items-start gap-y-14 gap-x-24 px-2 mt-10">
       {items.map(({ title, description, icon }) => (
         <div class="grid md:grid-cols-[min-content_auto] md:gap-x-4 gap-x-3 md:gap-y-0 gap-y-0.5 place-items-start items-center">
-          <div class="flex items-center justify-center md:w-14 w-12 md:h-14 h-12 rounded-full bg-primary-700 dark:bg-primary-500">
-            {icon && <Icon name={icon} class="md:w-7 w-6 md:h-7 w-6 text-white" />}
+          <div class="flex items-center justify-center md:w-13 w-11 md:h-13 h-11 rounded-full bg-primary-700 dark:bg-primary-600">
+            {icon && <Icon name={icon} class="md:w-7 w-5 md:h-7 h-5 text-white" />}
           </div>
           <h3 class="md:text-2.5xl text-2xl font-bold md:leading-none md:mb-0 mb-0.5">{title}</h3>
           <p class="md:text-xl text-lg text-gray-700 dark:text-slate-300 md:col-start-2 self-start" set:html={description} />
