--- a/src/components/blog/HighlightedPosts.astro
+++ b/src/components/blog/HighlightedPosts.astro
@@ -1,5 +1,6 @@
 ---
 import Grid from '~/components/blog/Grid.astro';
+import { Icon } from 'astro-icon';
 
 import { getBlogPermalink } from '~/utils/permalinks';
 import { findPostsByIds } from '~/utils/blog';
@@ -39,10 +40,10 @@ const posts = await findPostsByIds(postIds);
       {
         allPostsText && allPostsLink && (
           <a
-            class="text-gray-600 dark:text-slate-300 dark:hover:text-primary-400 hover:text-primary-700 transition duration-200 mb-6 lg:mb-0 text-xl"
+            class="text-gray-600 dark:text-slate-300 dark:hover:text-primary-400 hover:text-primary-700 transition duration-200 mb-6 lg:mb-0 text-xl inline-flex items-center font-semibold"
             href={allPostsLink}
           >
-            {allPostsText} »
+            {allPostsText} <Icon name="ph:caret-right-fill" class="h-4 w-4"/>
           </a>
         )
       }
