--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -17,7 +17,7 @@ const { meta } = Astro.props;
 
 <Layout {meta}>
   <slot name="header">
-    <Header {...headerData} position="right" showToggleTheme />
+    <Header {...headerData} position="right" showToggleTheme="true" />
   </slot>
   <main>
     <slot />
