--- a/src/components/blog/GridWork.astro
+++ b/src/components/blog/GridWork.astro
@@ -9,6 +9,6 @@ export interface Props {
 const { posts } = Astro.props;
 ---
 
-<div class="grid lg:gap-20 md:gap-14 gap-10 md:grid-cols-2 -mb-6">
+<div class="grid lg:gap-20 gap-10 md:grid-cols-2 -mb-6">
   {posts.map((post) => <Item post={post} />)}
 </div>
