--- a/src/components/blog/List.astro
+++ b/src/components/blog/List.astro
@@ -9,10 +9,10 @@ export interface Props {
 const { posts } = Astro.props;
 ---
 
-<ul>
+<ul class="flex flex-col md:gap-y-28 gap-y-16">
   {
     posts.map((post) => (
-      <li class="mb-12 md:mb-28">
+      <li>
         <Item post={post} />
       </li>
     ))
