Commented out STATA through MATLAB

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -57,9 +57,9 @@ const skillsList = [
     items: [
       { name: "R", icon: "logos:r-lang", percent: 80 },
       { name: "Python", icon: "logos:python", percent: 60 },
-      { name: "STATA", icon: "vscode-icons:file-type-stata", percent: 40 },
+     /* { name: "STATA", icon: "vscode-icons:file-type-stata", percent: 40 },
       { name: "SAS", icon: "vscode-icons:file-type-sas", percent: 20 },
-      { name: "MATLAB", icon: "vscode-icons:file-type-matlab", percent: 20 },
+      { name: "MATLAB", icon: "vscode-icons:file-type-matlab", percent: 20 },*/
     ],
   },
   {
