--- a/src/components/cv_new/AboutMe.astro
+++ b/src/components/cv_new/AboutMe.astro
@@ -8,6 +8,53 @@ const cardStyle = "bg-white dark:bg-slate-800 border border-transparent dark:bor
 
 ---
 
+<style>
+  .w-\[0\%\] {
+    width: 0%;
+  }
+
+  .w-\[10\%\] {
+    width: 10%;
+  }
+
+  .w-\[20\%\] {
+    width: 20%;
+  }
+
+  .w-\[30\%\] {
+    width: 30%;
+  }
+
+  .w-\[40\%\] {
+    width: 40%;
+  }
+  
+  .w-\[50\%\] {
+    width: 50%;
+  }
+
+  .w-\[60\%\] {
+    width: 60%;
+  }
+
+  .w-\[70\%\] {
+    width: 70%;
+  }
+
+  .w-\[80\%\] {
+    width: 80%;
+  }
+
+  .w-\[90\%\] {
+    width: 90%;
+  }
+
+  .w-\[100\%\] {
+    width: 100%;
+  }
+
+</style>
+
 
 <div class="bg-gray-100 dark:bg-slate-950">
   <div class="flex md:flex-row flex-col lg:gap-10 gap-5 max-w-[88rem] mx-auto py-5 px-4">
