--- a/src/components/cv_new/AboutMe.astro
+++ b/src/components/cv_new/AboutMe.astro
@@ -162,7 +162,7 @@ const cardStyle = "bg-white dark:bg-slate-800 border border-transparent dark:bor
                 <div class="sm:ml-5 w-full max-sm:mt-1">
                   <div class="flex items-center">
                     <h3 class="md:text-2xl text-xl font-semibold mr-2 leading-tight">{item.certification}</h3>
-                    <a href={item.url} target="_blank" class="dark:hover:text-secondary-400 hover:text-secondary-700 transition duration-200 hover:bg-gray-200 dark:hover:bg-slate-600 p-1 rounded-lg"><Icon name="ph:link-bold" class="md:h-7 md:w-7 h-6 w-6"/></a>
+                    <a href={item.url} aria-label=`Link to ${item.certification} from ${item.issuer}` target="_blank" class="dark:hover:text-secondary-400 hover:text-secondary-700 transition duration-200 hover:bg-gray-200 dark:hover:bg-slate-600 p-1 rounded-lg"><Icon name="ph:link-bold" class="md:h-7 md:w-7 h-6 w-6"/></a>
                   </div>
                   <div class="flex lg:flex-row md:flex-col sm:flex-row flex-col justify-between mb-4">
                     <span class="md:text-xl text-lg mb-1 text-gray-800 dark:text-slate-200">{item.issuer}</span>
