--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -23,7 +23,7 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
         {image && (
           <Picture
             src={image}
-            class="w-full h-full rounded-2xl shadow-xl bg-gray-400 dark:bg-slate-700"
+            class="w-full h-full rounded-2xl shadow-xl bg-gray-400 dark:bg-slate-700 aspect-video"
             widths={[400, 900, 1400]}
             sizes="(max-width: 900px) 400px, (max-width: 1400px) 900px, 1400px"
             alt={post.title}
