Changed code block background to shade from theme

--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -47,9 +47,9 @@ let imageStyle = 'prose-img:rounded-2xl prose-img:shadow-lg';
 // Try later
 //let imageStyle = 'lg:prose-img:rounded-2xl lg:prose-img:shadow-lg max-lg:prose-img:-mx-4';
 
-let preStyle = '#prose-pre:!bg-gray-100';
+let preStyle = 'prose-pre:!bg-slate-800';
 
-let proseStyle = `${baseStyle} ${tableStyle} ${linkStyle} ${imageStyle}`;
+let proseStyle = `${baseStyle} ${tableStyle} ${linkStyle} ${imageStyle} ${preStyle}`;
 
 //proseStyle = `max-w-4xl mx-auto px-4 prose md:prose-xl dark:prose-invert`;
 ---
