Converted SocialShare.astro links to <a>, removed unnecessary js, and made link styling more consistent with other website elements

--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -128,7 +128,7 @@ let proseStyle = `${baseStyle} ${tableStyle} ${linkStyle} ${imageStyle} ${preSty
     </div>
     <div class="mx-auto px-6 sm:px-6 max-w-4xl mt-8 flex justify-between flex-col sm:flex-row">
       <PostTags tags={post.tags} class="mr-5" />
-      <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 flex flex-row gap-3 align-middle" />
+      <SocialShare url={url} text={post.title} class="mt-5 sm:mt-1 flex flex-row gap-1 items-center" />
     </div>
   </article>
 </section>
