--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,6 +4,7 @@ import '~/assets/styles/base.css';
 import MetaTags from '~/components/common/MetaTags.astro';
 import BasicScripts from '~/components/common/BasicScripts.astro';
 import StructuredData from '~/components/common/StructuredData.astro';
+import { AdobeFonts } from '~/components/common/External.astro';
 
 import { MetaSEO } from '~/types';
 import { SITE } from '~/config.mjs';
@@ -20,8 +21,7 @@ const { language = 'en', textDirection = 'ltr' } = SITE;
 <html lang={language} dir={textDirection}>
   <head>
     <BasicScripts />
-    <link rel="preconnect" href="https://use.typekit.net" crossorigin />
-    <link rel="stylesheet" href="https://use.typekit.net/zcp4dkx.css">
+    <AdobeFonts />
     <MetaTags {...meta} />
   </head>
 
