Updated about text

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -92,7 +92,7 @@ const profileImage = import('../assets/images/profile.jpg');
 <Layout {meta}>
   <AboutMe
     name = "Jonathan Falcon"
-    title = "Fencer, cat dad, photographer, marketer"
+    title = "Fencer, songwriter, photographer, marketer"
     profileImage = {profileImage}
     profileAlt = "Jonathan Falcon smiling and not looking directly at camera. Backdrop is of Texas State University"
     aboutText = "Curiosity drives me; consumer behavior excites me. I will help you understand who your customers are and why they do what they do, so you can better tailor your products/services to exceed expectations."
