--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -89,7 +89,7 @@ const skillsList = [
 
 const profileImage = import('../assets/images/profile.jpg');
 ---
-<Layout {meta}>
+<Layout {meta} bg="bg-gray-100 dark:bg-slate-950">
   <AboutMe
     name = "Jonathan Falcon"
     title = "Fencer, songwriter, photographer, marketer"
