--- a/src/pages/[...blog]/[tag]/[...page].astro
+++ b/src/pages/[...blog]/[tag]/[...page].astro
@@ -15,14 +15,14 @@ export async function getStaticPaths({ paginate }) {
   const posts = await fetchPosts();
   const tags = new Set();
   posts.map((post) => {
-    Array.isArray(post.tags) && post.tags.map((tag) => tags.add(tag.toLowerCase()));
+    Array.isArray(post.tags) && post.tags.map((tag) => tags.add(tag));
   });
 
   return Array.from(tags).map((tag: string) =>
     paginate(
-      posts.filter((post) => Array.isArray(post.tags) && post.tags.find((elem) => elem.toLowerCase() === tag)),
+      posts.filter((post) => Array.isArray(post.tags) && post.tags.find((elem) => elem.toLowerCase() === tag.toLowerCase())),
       {
-        params: { tag: tag, blog: TAG_BASE || undefined },
+        params: { tag: tag.toLowerCase(), blog: TAG_BASE || undefined },
         pageSize: BLOG.postsPerPage,
         props: { tag },
       }
