Updated header elements to fit in smaller header

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -2,5 +2,5 @@
 import {Icon} from "astro-icon";
 ---
 
-<span class="flex items-center self-center ml-2 xs:text-2xl text-xl font-serif font-black whitespace-nowrap dark:text-white">
-  <Icon name="simple-icons:falcon" class="h-7 w-7 mr-2"/>Jonathan Falcon</span>
+<span class="flex items-center self-center ml-2 md:text-2xl text-1.5xl font-serif font-black whitespace-nowrap dark:text-white">
+  <Icon name="simple-icons:falcon" class="md:h-7 h-6 md:w-7 w-6 mr-2"/>Jonathan Falcon</span>
