--- a/src/components/common/ToggleMenu.astro
+++ b/src/components/common/ToggleMenu.astro
@@ -11,7 +11,7 @@ export interface Props {
 const {
   label = 'Toggle Menu',
   class:
-    className = 'ml-1.5 text-slate dark:text-white hover:bg-slate/10 dark:hover:bg-white/20 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center transition duration-300',
+    className = 'ml-1.5 text-slate dark:text-white hover:bg-slate/10 dark:hover:bg-white/20 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm md:p-2.5 p-2 inline-flex items-center transition duration-300',
   iconClass = 'w-6 h-6 icon-bold',
   iconName = 'tabler:menu',
 } = Astro.props;
