--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -38,8 +38,8 @@ import { SITE } from '~/config.mjs';
     attachEvent('[data-aw-toggle-menu]', 'click', function (_, elem) {
       elem.classList.toggle('expanded');
       document.body.classList.toggle('overflow-hidden');
-      document.querySelector('#header nav')?.classList.toggle('h-dynamic-screen-minus-nav');
-      document.querySelector('#header nav')?.classList.toggle('opacity-100');
+      document.querySelector('#header #menu')?.classList.toggle('h-dynamic-screen-minus-nav');
+      document.querySelector('#header #menu')?.classList.toggle('opacity-100');
       const header = document.getElementById('header');
       if (!header.classList.contains('scroll')) {
         document.getElementById('header').classList.add('scroll');
@@ -89,7 +89,7 @@ import { SITE } from '~/config.mjs';
       elem.classList.remove('expanded');
     }
     document.body.classList.remove('overflow-hidden');
-    document.querySelector('#header nav')?.classList.add('h-0');
-    document.querySelector('#header nav')?.classList.add('opacity-0');
+    document.querySelector('#header #menu')?.classList.add('h-0');
+    document.querySelector('#header #menu')?.classList.add('opacity-0');
   };
 </script>
