--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -26,7 +26,6 @@ export interface Props {
   actions?: Array<ActionLink>;
   isSticky?: boolean;
   showToggleTheme?: boolean;
-  showRssFeed?: boolean;
   position?: string;
 }
 
@@ -35,7 +34,6 @@ const {
   actions = [],
   isSticky = false,
   showToggleTheme = false,
-  showRssFeed = false,
   position = 'center',
 } = Astro.props;
 
@@ -58,64 +56,54 @@ const hoverStyleAlt = "relative after:absolute after:bg-slate dark:after:bg-whit
         <Logo />
       </a>
       <div class="flex items-center md:hidden">
-        {showToggleTheme && <ToggleTheme />}
         <ToggleMenu />
       </div>
     </div>
-    <nav
-      class="items-center w-full md:w-auto opacity-0 md:opacity-100 h-0 transition-all duration-500 md:flex dark:text-slate-200 md:h-auto overflow-y-auto md:overflow-visible md:mx-5"
+    <div
+      class="items-center w-full md:w-auto opacity-0 md:opacity-100 h-0 transition-all duration-[400ms] md:flex dark:text-slate-200 md:h-auto overflow-y-auto md:overflow-visible will-change-auto"
       aria-label="Main navigation"
+      id="menu"
     >
-      <ul class="flex flex-col md:flex-row md:self-center w-full md:w-auto md:text-1.5xl text-6xl md:mt-0 mt-2 md:font-semibold font-bold">
-        {
-          links.map(({ text, href, links }) => (
-            <li class={links?.length ? 'dropdown' : 'not-dropdown'}>
-              {links?.length ? (
-                <>
-                  <button class="hover:text-gray-900 dark:hover:text-white px-4 pt-2 flex items-center transition duration-150">
-                    {text} <Icon name="ph:caret-down-fill" class="w-3.5 h-3.5 ml-0.5 hidden md:inline" />
-                  </button>
-                  <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-slate/90 rounded md:absolute pl-4 md:pl-0 md:hidden md:bg-white/90 md:min-w-[200px] drop-shadow-xl md:border-2 dark:border-slate-700">
-                    {links.map(({ text: text2, href: href2 }) => (
-                      <li class="md:mb-0 mb-1">
-                        <a
-                          class="first:rounded-t last:rounded-b md:hover:bg-gray-200 dark:hover:bg-gray-700 md:py-2.5 py-1 px-5 block whitespace-no-wrap"
-                          href={href2}
-                        >
-                          {text2}
-                        </a>
-                      </li>
-                    ))}
-                  </ul>
-                </>
-              ) : (
-                <a
-                  class={hoverStyle}
-                  href={href}
-                >
-                  {text}
-                </a>
-              )}
-            </li>
-          ))
-        }
-      </ul>
-    </nav>
+      <nav class="md:mx-5">
+        <ul class="flex flex-col md:flex-row md:self-center w-full md:w-auto md:text-1.5xl text-6xl md:mt-0 mt-2 md:font-semibold font-bold">
+          {
+            links.map(({ text, href, links }) => (
+              <li class={links?.length ? 'dropdown' : 'not-dropdown'}>
+                {links?.length ? (
+                  <>
+                    <button class="hover:text-gray-900 dark:hover:text-white px-4 pt-2 flex items-center transition duration-150">
+                      {text} <Icon name="ph:caret-down-fill" class="w-3.5 h-3.5 ml-0.5 hidden md:inline" />
+                    </button>
+                    <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-slate/90 rounded md:absolute pl-4 md:pl-0 md:hidden md:bg-white/90 md:min-w-[200px] drop-shadow-xl md:border-2 dark:border-slate-700">
+                      {links.map(({ text: text2, href: href2 }) => (
+                        <li class="md:mb-0 mb-1">
+                          <a
+                            class="first:rounded-t last:rounded-b md:hover:bg-gray-200 dark:hover:bg-gray-700 md:py-2.5 py-1 px-5 block whitespace-no-wrap"
+                            href={href2}
+                          >
+                            {text2}
+                          </a>
+                        </li>
+                      ))}
+                    </ul>
+                  </>
+                ) : (
+                  <a
+                    class={hoverStyle}
+                    href={href}
+                  >
+                    {text}
+                  </a>
+                )}
+              </li>
+            ))
+          }
+        </ul>
+      </nav>
+      {showToggleTheme && <ToggleTheme iconClass="md:w-5 w-10 md:h-5 h-10" />}
+    </div>
     <div class:list={[{ 'ml-auto': position === 'left' }, 'md:self-center flex items-center md:mb-0']}>
       <div class="hidden items-center md:flex">
-        {showToggleTheme && <ToggleTheme iconClass="w-5 h-5" />}
-
-        {
-          showRssFeed && (
-            <a
-              class="text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
-              aria-label="RSS Feed"
-              href={getAsset('/rss.xml')}
-            >
-              <Icon name="tabler:rss" class="w-5 h-5" />
-            </a>
-          )
-        }
         {
           actions?.length ? (
             <span class="ml-4">
