--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -40,7 +40,7 @@ let paragraphStyle = 'prose-p:mt-0';
 
 let textColor = 'text-inherit dark:text-inherit prose-li:marker:text-inherit dark:prose-li:marker:text-inherit';
 
-let linkStyle = 'prose-a:duration-200 prose-a:transition prose-a:text-blue-600 hover:prose-a:text-blue-900 dark:hover:prose-a:text-blue-500 dark:prose-a:text-blue-300 prose-a:underline-offset-2';
+let linkStyle = 'prose-a:duration-200 prose-a:transition prose-a:text-primary-600 hover:prose-a:text-primary-800 dark:hover:prose-a:text-primary-600 dark:prose-a:text-primary-400 prose-a:underline-offset-2';
 
 let imageStyle = 'prose-img:rounded-2xl prose-img:shadow-lg';
 
