Updated certifications to include Google Analytics

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -27,6 +27,13 @@ const educationList = [
 
 const certificationList = [
   {
+    certification: "Google Analytics",
+    issuer: "Google Digital Academy (SkillShop)",
+    icon: "logos:google-analytics",
+    url: "https://skillshop.credential.net/b3a851ef-f9ec-4a1a-b996-abad6215f36c",
+    dates: "2023"
+  },
+  {
     certification: "Digital Marketing",
     issuer: "Hubspot Academy",
     icon: "mdi:hubspot",
